// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Nav/> 1`] = `
<ul
  className="nav"
>
  <li>
    <a
      className={undefined}
      href={undefined}
      onClick={[Function]}
      style={undefined}
    >
      Home
    </a>
  </li>
  <li>
    <a
      className={undefined}
      href={undefined}
      onClick={[Function]}
      style={undefined}
    >
      About
    </a>
  </li>
</ul>
`;

exports[`shallow <Nav/> 1`] = `
<ul
  className="nav"
>
  <li>
    <NavLink
      activeClassName="active"
      exact={true}
      to="/"
    >
      Home
    </NavLink>
  </li>
  <li>
    <NavLink
      activeClassName="active"
      exact={true}
      to="/about"
    >
      About
    </NavLink>
  </li>
</ul>
`;
